adds preference to return to first trait

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -587,6 +587,9 @@
     <string name="preferences_behavior_cycle_traits">Cycling traits advances entry</string>
     <string name="preferences_behavior_cycle_traits_description">After going through all traits, Field Book goes to the next entry</string>
 
+    <string name="preferences_behavior_return_to_first_trait">Advancing entry returns to first trait</string>
+    <string name="preferences_behavior_return_to_first_trait_description">When moving to the next entry, Field Book also returns to the first trait</string>
+
     <string name="preferences_behavior_volume_buttons_navigate">Map volume keys to entry navigation</string>
     <string name="preferences_behavior_volume_buttons_navigate_description">Volume keys go to next or previous entry</string>
 
