--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -303,6 +303,14 @@
     <string name="trait_gnss_connect_button_content_description">Opens a dialog with possible GPS devices to connect to.</string>
     <string name="gnss_trait_averaging_switch_text">Average</string>
 
+    <string name="trait_gnss_precision_header">Required Fix:</string>
+    <string name="trait_gnss_accuracy_header">Acc.:</string>
+    <string name="trait_gnss_hdop_header">HDOP:</string>
+    <string name="trait_gnss_latitude_header">Lat.:</string>
+    <string name="trait_gnss_longitude_header">Long.:</string>
+    <string name="trait_gnss_altitude_header">Alt.:</string>
+    <string name="trait_gnss_time_header">UTC:</string>
+
     <!-- Trait Layout: Date -->
     <string name="trait_date_calendar_picker_content_description">Button that opens a calendar picker.</string>
     <string name="trait_date_save_button_content_description">This will save the current selected date.</string>
