--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -727,6 +727,7 @@
     <string name="brapi_info_title">Breeding API</string>
 
     <string name="preferences_brapi_enable_title">Enable BrAPI</string>
+    <string name="preferences_brapi_enable_summary">The Breeding API allows simple data transfer to compatible databases.</string>
     <string name="preferences_brapi_core_title">Configuration</string>
 
     <string name="menu_action_brapi_pref_title">Authorize BrAPI</string>
@@ -737,10 +738,10 @@
     <string name="brapi_base_url_desc">The base URL for the connected BrAPI server</string>
     <string name="brapi_base_url_default" translatable="false">https://test-server.brapi.org</string>
 
-    <string name="brapi_choice_to_make_default_dialog_title">Make this BrAPI server the default source?</string>
-    <string name="brapi_choice_to_make_default_import">Make Default Import Source</string>
-    <string name="brapi_choice_to_make_default_export">Make Default Export Source</string>
-    <string name="brapi_choice_to_make_default_negative">No thanks</string>
+    <string name="brapi_choice_to_make_default_dialog_title">Make this BrAPI server the default:</string>
+    <string name="brapi_choice_to_make_default_import">Import Source</string>
+    <string name="brapi_choice_to_make_default_export">Export Source</string>
+    <string name="brapi_choice_to_make_default_negative">Cancel</string>
     <string name="brapi_choice_to_make_default_positive">Save</string>
 
     <string name="brapi_edit_display_name">Edit Display Name</string>
@@ -753,7 +754,7 @@
     <string name="brapi_timeout">Server Timeout</string>
     <string name="brapi_chunk_size">Chunk Size</string>
 
-    <string name="preferences_brapi_advanced_title">Advanced Auth Settings</string>
+    <string name="preferences_brapi_advanced_title">Auth Settings</string>
 
     <string name="preferences_brapi_oidc_flow" translatable="false">OIDC Flow</string>
     <string name="preferences_brapi_oidc_flow_oauth_code">OAuth2 Authorization Code</string>
