--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -778,7 +778,7 @@
     <string name="preferences_brapi_server_t3_wheat" translatable="false">T3 Wheat Sandbox</string>
     <string name="preferences_brapi_server_t3_oat" translatable="false">T3 Oat Sandbox</string>
     <string name="preferences_brapi_server_t3_barley" translatable="false">T3 Barley Sandbox</string>
-    <string name="preferences_brapi_server_test">Default Test Server</string>
+    <string name="preferences_brapi_server_test">BrAPI Test Server</string>
     <string name="preferences_brapi_server_add">Submit a server</string>
 
     <!-- Authorization -->
