--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -654,10 +654,10 @@
     <string name="pref_geonav_log">GeoNav Log</string>
     <string name="pref_geonav_log_off">Off</string>
     <string name="pref_geonav_log_off_description">Off: No logs being recorded</string>
-    <string name="pref_geonav_log_closest_entry">Closest</string>
-    <string name="pref_geonav_log_closest_entry_description">Closest: Logging closest entry to storage/geonav/closest_log.txt</string>
-    <string name="pref_geonav_log_verbose">Verbose</string>
-    <string name="pref_geonav_log_verbose_description">Verbose: Logging all location updates and algorithm steps to storage/geonav/log.txt</string>
+    <string name="pref_geonav_log_limited">Limited</string>
+    <string name="pref_geonav_log_limited_description">Limited: Logging closest entry to storage/geonav/closest_log.txt</string>
+    <string name="pref_geonav_log_full">Full</string>
+    <string name="pref_geonav_log_full_description">Full: Logging all location updates and algorithm steps to storage/geonav/log.txt</string>
 
     <string name="pref_geonav_update_interval_title">Update Interval (s)</string>
     <string name="pref_geonav_update_interval_summary">The time between location updates is %ss.</string>
