better label print defaults

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -249,7 +249,7 @@
     <string name="dialog_att_chooser_other">Other</string>
     <string name="dialog_collect_att_chooser_title">Choose an attribute</string>
     <string name="infobars_attribute_placeholder">Select</string>
-    <string name="field_name_attribute">Field Name</string>
+    <string name="field_name_attribute">field_name</string>
 
     <!-- ID/Barcode Search -->
     <string name="act_collect_barcode_search_exists_in_other_field">This ID is in %s</string>
@@ -355,8 +355,8 @@
     <string name="trait_layout_print_label_copies_title">Copies:</string>
     <string name="trait_layout_print_label_simple_text">simple</string>
     <string name="trait_layout_print_label_detailed_text">detailed</string>
-    <string name="trait_layout_print_label_date_option">Date</string>
-    <string name="trait_layout_print_label_blank_option">Blank</string>
+    <string name="trait_layout_print_label_date_option">date</string>
+    <string name="trait_layout_print_label_blank_option">blank</string>
 
     <string name="printer_open">Printer is open</string>
     <string name="printer_paused">Printer is paused</string>
