--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -753,7 +753,11 @@
     <string name="preferences_brapi_enable_title">Enable BrAPI</string>
     <string name="preferences_brapi_enable_summary">The Breeding API allows simple data transfer to compatible databases.</string>
     <string name="preferences_brapi_core_title">Configuration</string>
-    <string name="preferences_brapi_code_barcode">Scan a configuration code</string>
+    <string name="preferences_brapi_barcode_config_title">Auto-configure</string>
+    <string name="preferences_brapi_barcode_config_summary">Manage settings with QR codes</string>
+    <string name="preferences_brapi_barcode_config_scan">Import new settings</string>
+    <string name="preferences_brapi_barcode_config_share">Share current settings</string>
+    <string name="preferences_brapi_barcode_config_dialog_title">Scannable BrAPI Configuration</string>
 
     <string name="menu_action_brapi_pref_title">Authorize BrAPI</string>
     <string name="act_brapi_auth_http_warning_title">HTTP Warning</string>
