Add dialog for selecting trait

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -227,6 +227,7 @@
     <string name="dialog_new_trait_add_category_content_description">Add new category.</string>
 
 
+    <string name="select_trait">Select Trait</string>
 
 
     <!-- COLLECT -->
