--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -720,6 +720,9 @@
     <string name="trait_audio_recording_warning">Trait level audio is already recording. Stop that first.</string>
     <string name="trait_audio_playing_warning">Trait level audio is playing. Stop that first.</string>
 
+    <string name="pref_beta_upload_files">Upload files</string>
+    <string name="pref_beta_upload_files_summary">Upload files to process audio and extract info.</string>
+
 
     <!-- ABOUT -->
     <!-- App  -->
