--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -703,15 +703,18 @@
     <string name="database_reset_warning2">A database reset cannot be reversed. The app will quit after clearing the database. Are you really sure you want to continue?</string>
     <string name="database_reset_message">Database has been deleted</string>
 
-    <!-- Beta -->
-    <string name="preferences_beta_title">Beta</string>
-    <string name="pref_beta_repeated_values_title">Repeated Measures</string>
-    <string name="pref_beta_repeated_values_summary">Enables multiple values to be collected for each entry/trait</string>
-    <string name="pref_beta_repeated_values_disabled_title">Repeated Measures Disabled</string>
-    <string name="pref_beta_repeated_values_disabled_message">Disabling this feature will make some repeated values unavailable.</string>
+    <!-- Experimental -->
+    <string name="preferences_experimental_title">Experimental</string>
+    <string name="preferences_experimental_stable_title">Stable Settings</string>
+    <string name="preferences_experimental_beta_title">Beta Settings</string>
+    <string name="preferences_experimental_alpha_title">Alpha Settings</string>
+    <string name="pref_experimental_repeated_values_title">Repeated Measures</string>
+    <string name="pref_experimental_repeated_values_summary">Enables multiple values to be collected for each entry/trait</string>
+    <string name="pref_experimental_repeated_values_disabled_title">Repeated Measures Disabled</string>
+    <string name="pref_experimental_repeated_values_disabled_message">Disabling this feature will make some repeated values unavailable.</string>
 
-    <string name="pref_beta_enable_field_audio_title">Enable Field Audio</string>
-    <string name="pref_beta_enable_field_audio_summary">Enable audio recording feature for the entire field.</string>
+    <string name="pref_experimental_enable_field_audio_title">Enable Field Audio</string>
+    <string name="pref_experimental_enable_field_audio_summary">Enable audio recording feature for the entire field.</string>
     <string name="menu_collect_start_field_audio">Start Recorder</string>
     <string name="menu_collect_stop_field_audio">Stop Recorder</string>
     <string name="field_audio_recording_start">Recording field level audio.</string>
