--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -705,9 +705,9 @@
 
     <!-- Experimental -->
     <string name="preferences_experimental_title">Experimental</string>
-    <string name="preferences_experimental_stable_title">Stable Settings</string>
-    <string name="preferences_experimental_beta_title">Beta Settings</string>
-    <string name="preferences_experimental_alpha_title">Alpha Settings</string>
+    <string name="preferences_experimental_stable_title">Stable</string>
+    <string name="preferences_experimental_beta_title">Beta</string>
+    <string name="preferences_experimental_alpha_title">Alpha</string>
     <string name="pref_experimental_repeated_values_title">Repeated Measures</string>
     <string name="pref_experimental_repeated_values_summary">Enables multiple values to be collected for each entry/trait</string>
     <string name="pref_experimental_repeated_values_disabled_title">Repeated Measures Disabled</string>
