--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,6 +93,11 @@
     <string name="fields_delete_study">Delete field</string>
     <string name="fields_delete_study_confirmation">Are you sure you want to delete this field? This will delete all data from this field.</string>
 
+    <plurals name="fields_delete_confirmation">
+        <item quantity="one">Are you sure you want to delete the field "%s"?</item>
+        <item quantity="other">Are you sure you want to delete these fields: %s?</item>
+    </plurals>
+
     <!-- Import -->
     <string name="fields_toolbar_add_field">Import Field</string>
     <string name="import_dialog_title_fields">Import field</string>
