--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1012,5 +1012,6 @@
     <string name="dialog_new_trait_observations_exist_error">Observations already exist for this trait. Only the following parameters can be edited.</string>
     <string name="dialog_new_trait_error_must_select_a_layout">You must select a layout.</string>
     <string name="trait_creator_parameter_warning_integer_required">Integer required.</string>
+    <string name="dialog_new_trait_error_cannot_update_to_brapi_trait">Traits cannot be updated to BrAPI traits.</string>
 
 </resources>
