--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -487,6 +487,8 @@
     <string name="export_format_database">Database</string>
     <string name="export_format_table">Table</string>
     <string name="export_file_name">Filename</string>
+    <string name="export_zip_file_name_label">ZIP Filename</string>
+    <string name="export_csv_file_name_label">CSV Filename</string>
     <string name="export_content_columns_title">Field columns</string>
     <string name="export_content_columns_all">All imported columns</string>
     <string name="export_content_columns_unique">Only unique identifier</string>
@@ -501,6 +503,9 @@
     <string name="export_error_missing_trait">Trait type must be selected</string>
     <string name="export_overwrite">Overwrite previous export</string>
     <string name="dialog_export_bundle_data_cb_text">Bundle media data with export file.</string>
+    <string name="export_default_multi_export_suffix">multiple_fields</string>
+    <string name="export_multiple_file_message">Note: Multiple exports are bundled into a ZIP file</string>
+
 
     <!-- Citation -->
     <string name="citation_title">Citation</string>
