--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1021,5 +1021,7 @@
     <string name="tutorial_traits_visibility_title">Trait Visibility</string>
     <string name="tutorial_traits_visibility_description">Traits can be disabled from collection by toggling the checkbox.</string>
     <string name="shutter_capture_content_description">Shutter button for snapping a picture.</string>
+    <string name="dialog_ask_high_contrast_title">Switch to High Contrast Theme?</string>
+    <string name="dialog_ask_high_contrast_message">eInk device was detected, we suggest switching to the high contrast theme for an optimal experience</string>
 
 </resources>
