--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1023,5 +1023,7 @@
     <string name="shutter_capture_content_description">Shutter button for snapping a picture.</string>
     <string name="dialog_ask_high_contrast_title">Switch to High Contrast Theme?</string>
     <string name="dialog_ask_high_contrast_message">eInk device was detected, we suggest switching to the high contrast theme for an optimal experience</string>
+    <string name="dialog_geonav_prefs_sensor_missing_title">Required sensor missing</string>
+    <string name="dialog_geonav_prefs_sensor_missing_message">The trapezoidal method requires an accelerometer and gyroscope to use compass input.</string>
 
 </resources>
