replaced many image/buttons with floating action buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1025,5 +1025,10 @@
     <string name="dialog_ask_high_contrast_message">eInk device was detected, we suggest switching to the high contrast theme for an optimal experience</string>
     <string name="dialog_geonav_prefs_sensor_missing_title">Required sensor missing</string>
     <string name="dialog_geonav_prefs_sensor_missing_message">The trapezoidal method requires an accelerometer and gyroscope to use compass input.</string>
+    <string name="trait_audio_button_content_description">Controls recording audio.</string>
+    <string name="trait_counter_minus_content_description">Subtract count by one</string>
+    <string name="trait_counter_plus_content_description">Add to total count by one</string>
+    <string name="trait_date_minus_content_description">Subtracts one day from the current date</string>
+    <string name="trait_date_add_content_description">Adds one day to the current date</string>
 
 </resources>
