--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,13 +155,10 @@
     <string name="field_detail_title">Field Detail</string>
     <string name="field_edit_name">Edit Field Name</string>
 
-
+    <string name="field_detail_narrative">Imported from "%s" with "%s" "%s" and "%s" attributes. Sorted by "%s"</string>
     <string name="field_default_observation_level">entries</string>
     <string name="field_default_import_source">sample file</string>
-    <string name="field_import_source_message">Imported from "%s"</string>
-    <string name="field_attribute_total">with "%s" attributes</string>
     <string name="field_default_sort_order">import order</string>
-    <string name="field_sort_message">Sorted by "%s"</string>
 
     <string name="field_no_activity">No activity</string>
     <string name="field_data_title">Data</string>
