add select all to action bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <!-- General -->
     <string name="list_item_field_popup_menu_content_description">Opens a menu for the selected field.</string>
     <string name="selected_count">%1$d selected</string>
+    <string name="fields_select_all">Select All</string>
 
     <!-- Sort -->
     <string name="fields_sort_update">Sort</string>
